Fix vertical alignment of up/down comment buttons

--- a/src/less/Comment.less
+++ b/src/less/Comment.less
@@ -45,8 +45,8 @@
 
   &-icon {
     display: inline-block;
-    vertical-align: bottom;
-    margin-bottom: 2px;
+    vertical-align: text-bottom;
+    margin-bottom: -1px;
     width: 16px;
     height: 16px;
     background-size: 16px 16px;
